--- a/dragon attack/index.html
+++ b/dragon attack/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>JavaScript</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <h1>Dragon Attack !!</h1>
     <div id="game"></div>
 
@@ -16,6 +14,5 @@
     <script src="js/utilities.js"></script>
     <!-- Code principal du jeu -->
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
